--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -171,7 +171,7 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
-\chapter{Grupo x LP 2021}
+\chapter{Grupo 3 LP 2021}
 \label{index}\hypertarget{index}{}\input{index}
 \chapter{R\+E\+A\+D\+ME}
 \label{md_README}
